--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -52,8 +52,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AYu-yi-yo4" userLabel="recordView">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zky-DF-Nxf" userLabel="recordButton">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <color key="backgroundColor" red="1" green="0.062338048889999997" blue="0.10071189480000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="recordBtnClicked:" destination="kC0-Pt-0sG" eventType="touchDown" id="VnK-M5-XVa"/>
+                                            <action selector="stopBtnClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="wns-hr-aqV"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mic.png" translatesAutoresizingMaskIntoConstraints="NO" id="zJ0-Qc-8Q8">
+                                        <rect key="frame" x="59" y="195" width="256" height="256"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="zJ0-Qc-8Q8" secondAttribute="centerX" id="RU8-sx-4JZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="zky-DF-Nxf" secondAttribute="bottom" id="XZz-kh-qY2"/>
+                                    <constraint firstItem="zky-DF-Nxf" firstAttribute="top" secondItem="AYu-yi-yo4" secondAttribute="top" id="ZPh-pD-Hrr"/>
+                                    <constraint firstAttribute="trailing" secondItem="zky-DF-Nxf" secondAttribute="trailing" id="eZb-lz-B7A"/>
+                                    <constraint firstItem="zky-DF-Nxf" firstAttribute="leading" secondItem="AYu-yi-yo4" secondAttribute="leading" id="nFc-y9-nvt"/>
+                                    <constraint firstAttribute="centerY" secondItem="zJ0-Qc-8Q8" secondAttribute="centerY" id="vOW-LQ-ea6"/>
+                                </constraints>
+                            </view>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d6d-lf-4xO" userLabel="playView">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sfx-6V-ipX" userLabel="playButton">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <color key="backgroundColor" red="0.14215941213569894" green="0.32623802477338593" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playBtnClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="EGA-5L-O3Z"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x9m-zc-EuL">
+                                        <rect key="frame" x="139" y="564" width="97" height="30"/>
+                                        <color key="backgroundColor" red="0.55367896660000004" green="1" blue="0.28208946010000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Send to Parse">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="uploadToParseClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="zWE-YO-p9t"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="play.png" translatesAutoresizingMaskIntoConstraints="NO" id="Zcj-es-CVf">
+                                        <rect key="frame" x="86" y="260" width="240" height="128"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gPH-5m-6Sl" userLabel="closeButton">
+                                        <rect key="frame" x="303" y="8" width="64" height="64"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="64" id="EHD-Kr-B0d"/>
+                                            <constraint firstAttribute="height" constant="64" id="vD3-U6-Sq9"/>
+                                        </constraints>
+                                        <state key="normal" image="close.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="closeClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="9Hj-hf-ch6"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="sfx-6V-ipX" firstAttribute="leading" secondItem="d6d-lf-4xO" secondAttribute="leading" id="D2w-QT-PNd"/>
+                                    <constraint firstItem="sfx-6V-ipX" firstAttribute="top" secondItem="d6d-lf-4xO" secondAttribute="top" id="MhF-LV-hfx"/>
+                                    <constraint firstAttribute="trailing" secondItem="gPH-5m-6Sl" secondAttribute="trailing" constant="5" id="Q9c-uG-rO7"/>
+                                    <constraint firstItem="gPH-5m-6Sl" firstAttribute="top" secondItem="d6d-lf-4xO" secondAttribute="top" constant="5" id="X5V-Gk-X26"/>
+                                    <constraint firstAttribute="trailing" secondItem="sfx-6V-ipX" secondAttribute="trailing" id="cen-Mx-7T1"/>
+                                    <constraint firstAttribute="centerX" secondItem="Zcj-es-CVf" secondAttribute="centerX" id="dEj-i6-45D"/>
+                                    <constraint firstAttribute="centerY" secondItem="Zcj-es-CVf" secondAttribute="centerY" id="hDV-i7-1Ru"/>
+                                    <constraint firstAttribute="bottom" secondItem="sfx-6V-ipX" secondAttribute="bottom" id="mDH-Mk-LEO"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TT9-yz-cz0">
-                                <rect key="frame" x="16" y="6" width="56" height="30"/>
+                                <rect key="frame" x="0.0" y="0.0" width="91" height="52"/>
+                                <color key="backgroundColor" red="1" green="0.16243877176535937" blue="0.96726548337937734" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Log Out">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -61,54 +142,25 @@
                                     <action selector="logOutClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="Ujd-v0-A2y"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sfx-6V-ipX">
-                                <rect key="frame" x="172" y="298" width="30" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Play">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="playBtnClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="EGA-5L-O3Z"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXd-ML-EvN">
-                                <rect key="frame" x="171" y="250" width="33" height="30"/>
-                                <color key="backgroundColor" red="0.53090180399999998" green="0.88291766829999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Stop">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="stopBtnClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="w0P-Uy-OjU"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x9m-zc-EuL">
-                                <rect key="frame" x="139" y="393" width="97" height="30"/>
-                                <state key="normal" title="Send to Parse">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="uploadToParseClicked:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="zWE-YO-p9t"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zky-DF-Nxf">
-                                <rect key="frame" x="55" y="70" width="282" height="150"/>
-                                <color key="backgroundColor" red="1" green="0.062338048889999997" blue="0.10071189480000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Record">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="recordBtnClicked:" destination="kC0-Pt-0sG" eventType="touchDown" id="GFj-S9-vcB"/>
-                                    <action selector="recordStopped:" destination="kC0-Pt-0sG" eventType="touchUpInside" id="1nX-Ty-P5S"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.55367896655610593" green="1" blue="0.28208946008731928" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="AYu-yi-yo4" firstAttribute="leading" secondItem="X9N-Td-rWo" secondAttribute="leading" id="7Tn-Gt-fyZ"/>
+                            <constraint firstItem="d6d-lf-4xO" firstAttribute="top" secondItem="xtZ-9F-ob3" secondAttribute="bottom" id="IJW-kh-mqr"/>
+                            <constraint firstItem="cPP-aK-T1J" firstAttribute="top" secondItem="AYu-yi-yo4" secondAttribute="bottom" id="REF-AV-jsl"/>
+                            <constraint firstAttribute="trailing" secondItem="AYu-yi-yo4" secondAttribute="trailing" id="q8p-VL-wYJ"/>
+                            <constraint firstItem="cPP-aK-T1J" firstAttribute="top" secondItem="d6d-lf-4xO" secondAttribute="bottom" id="vYM-YX-d0H"/>
+                            <constraint firstItem="AYu-yi-yo4" firstAttribute="top" secondItem="xtZ-9F-ob3" secondAttribute="bottom" id="vgd-Qt-VBe"/>
+                            <constraint firstAttribute="trailing" secondItem="d6d-lf-4xO" secondAttribute="trailing" id="yEk-tx-sWT"/>
+                            <constraint firstItem="d6d-lf-4xO" firstAttribute="leading" secondItem="X9N-Td-rWo" secondAttribute="leading" id="yd3-ei-BKA"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="logOutButton" destination="TT9-yz-cz0" id="AHS-s1-ggE"/>
                         <outlet property="playBtn" destination="sfx-6V-ipX" id="Izq-4Y-yRI"/>
+                        <outlet property="playView" destination="d6d-lf-4xO" id="qmr-ga-CzW"/>
                         <outlet property="recordPauseBtn" destination="zky-DF-Nxf" id="Obh-FG-gey"/>
-                        <outlet property="stopBtn" destination="vXd-ML-EvN" id="m0U-tV-gBE"/>
+                        <outlet property="recordView" destination="AYu-yi-yo4" id="YJN-z8-9sC"/>
                         <outlet property="uploadToParse" destination="x9m-zc-EuL" id="64Q-ju-EvU"/>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="logOutClicked" id="fuz-00-iPx"/>
                     </connections>
@@ -118,6 +170,11 @@
             <point key="canvasLocation" x="-502.5" y="1084.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="close.png" width="128" height="128"/>
+        <image name="mic.png" width="256" height="256"/>
+        <image name="play.png" width="256" height="256"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="fuz-00-iPx"/>
     </inferredMetricsTieBreakers>
